<resources>
    <string name="app_name">SETPlanner</string>
    <string name="activity2">Projects</string>
    <string name="activity3">Schedule</string>
    <string name="activity1">Courses</string>
    <string name="add_course_button_text">+</string>
    <string name="ProjectPrompt">Add a project:</string>
    <string name="NoProjectsDue">No project due!</string>
    <string name="enter_a_course">Enter a course</string>
    <string name="DelCourse">"           Delete selected course? "</string>
    <string name="DelProject">"            Delete selected Project? "</string>
    <string name="dueString">Due: %1$s</string>
    <string name="course_name">Course Name</string>
    <string name="_2017_12_12">2017-12-12</string>
    <string name="projname">projName</string>
    <string name="incomplete">incomplete</string>
    <string name="completed">"            Completed: "</string>
    <string name="delete_course">Delete Course:</string>
    <string name="start">start</string>
    <string name="close">close</string>
    <string name="add_photo">Add Photo:</string>
    <string name="add">Add</string>
    <string name="conestoga_college">Go to eConestoga</string>
    <string name="eConestoga">https://conestoga.desire2learn.com/d2l/home</string>
    <string name="appwidget_text">Set Planner</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
</resources>
