<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:textSize="10pt"
            android:text="@string/delete_course" />

        <Switch
            android:id="@+id/delete_Switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:textOn="@string/start"
            android:textOff="@string/close"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:textSize="10pt"
            android:text="@string/add_photo" />

        <Button
            android:id="@+id/add_Photo_Button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/add"
            />

    </LinearLayout>

</LinearLayout>